Update base project to 0.05
- Add modular warning property to ContentGate
- Add push workflow for the Discord

Signed-off-by: Serene <serene@mymind.care>

--- a/src/components/ContentGate.astro
+++ b/src/components/ContentGate.astro
@@ -1,10 +1,11 @@
 ---
 import { Aside, LinkCard } from '@astrojs/starlight/components';
+const { warning } = Astro.props;
 ---
 
 <div id="content-gate">
     <Aside type="caution" title="Warning">
-        This section contains sensitive material pertaining to assisted death.
+        <i>{warning}</i>
     </Aside>
     <LinkCard id="acknowledge-btn" title="I understand, continue." />
 </div>
